--- a/cluster/releases/podinfo.yaml
+++ b/cluster/releases/podinfo.yaml
@@ -26,7 +26,7 @@ spec:
       annotations:
         kubernetes.io/ingress.class: "nginx"
         nginx.ingress.kubernetes.io/configuration-snippet: |
-          proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:9898;
+          proxy_set_header l5d-dst-override podinfo.prod.svc.cluster.local:9898;
           proxy_hide_header l5d-remote-ip;
           proxy_hide_header l5d-server-id;
       path: /
