--- a/cluster/namespaces/ingress-nginx.yaml
+++ b/cluster/namespaces/ingress-nginx.yaml
@@ -3,5 +3,5 @@ kind: Namespace
 metadata:
   annotations:
     fluxcd.io/ignore: "false"
-    linkerd.io/inject: enabled
+    linkerd.io/inject: disabled
   name: ingress-nginx
