--- a/cluster/releases/nginx-ingress.yaml
+++ b/cluster/releases/nginx-ingress.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: ingress-nginx
   annotations:
     fluxcd.io/ignore: "false"
+    plop: plop
 spec:
   releaseName: nginx-ingress
   chart:
