--- a/cluster/releases/podinfo.yaml
+++ b/cluster/releases/podinfo.yaml
@@ -6,8 +6,8 @@ metadata:
   namespace: prod
   annotations:
     fluxcd.io/ignore: "false"
-    fluxcd.io/automated: "true"
-    fluxcd.io/tag.chart-image: semver:~3.1
+    fluxcd.io/automated: "false"
+    # fluxcd.io/tag.chart-image: semver:~3.1
 spec:
   releaseName: podinfo
   chart:
@@ -19,7 +19,7 @@ spec:
       repository: stefanprodan/podinfo
       tag: 3.1.5
     service:
-      enabled: true
+      enabled: false
       type: ClusterIP
     ingress:
       enabled: true
